fix major alignment & sizing properties

--- a/animated-text.css
+++ b/animated-text.css
@@ -1,8 +1,8 @@
 body{
-	font-family: 'Merriweather', serif;
-	font-weight: lighter;
+	color: #40514E;
+	margin: 0;
 	text-align: center;
-
+	font-family: 'Merriweather', serif;
 }
 
 .top-container{
@@ -38,12 +38,12 @@ body{
 
 .knockout {
 	margin-top: 51px;
-	vertical-align: middle;
+	vertical-align: middle; /*sets vertical alignment of an inline, inline-block or table-cell box.*/
 	text-align: center;
 	/*font-family: 'Pacifico', cursive;
-	font-size:35pt;*/
+	font-size:35pt;
 	color: blue;
-	color: #fff;
+	color: #fff;*/
 	background: linear-gradient(110deg, #FFF5E4 33%, rgba(0, 0, 0, 0) 33%), linear-gradient(110deg, #C5E7D7 34%, #ffeead 34%);  /*#7FBCD2*/
 	background-size: 400%;
 	 -webkit-text-fill-color: transparent;
@@ -54,6 +54,14 @@ body{
 		animation: Gradient 5s ease infinite;
 		-webkit-animation: Gradient 15s ease infinite;
 		-moz-animation: Gradient 5s ease infinite;
+}
+
+.main{
+	width: 500px;
+	height: 500px;
+	margin-left: 30%;
+	margin-right:40%;
+	margin-top: 10%;
 }
 
 h1 {
@@ -75,18 +83,25 @@ h3 {
 	color: #11999E;
 	font-weight: normal;
 }
-p{
-	color:#fff;
-}
-img{
-	max-width: 25%;
-	height: auto;
-	border-radius: 50%;
+hr {
+	border: dotted #C5E7D7 6px;
+	border-bottom: none;
+	width: 4%;
+	margin: 100px auto;
+  }
+  
+a{
+	color: #11999E;
+	font-family: 'Montserrat', sans-serif;
+	margin: 10px 20px;
+	text-decoration: none;
+  }
+  
+  a:hover {
+	color: #EAF6F6;
+  }
 
-}
-.CV-pic{
-	margin-top: 10%;
-}
+
 /*.color-overlay{
 	width: 100px;
 	height: 100px;
@@ -94,37 +109,24 @@ img{
 	background: red;
 	opacity: .7;
 	display:inline-block;
-	position:absolute;*/
-	
-}
-@-webkit-keyframes Gradient {
-	0% {
-		background-position: 30% 50%
+	position:absolute;
 	}
-	50% {
-		background-position: 25% 50%
-	}
-	100% {
-		background-position: 30% 50%
-	}
-	
-}
-
-.main{
-	width: 500px;
-	height: 500px;
-	margin-left: 30%;
-	margin-right:40%;
-	margin-top: 10%;
-}
+	*/
 
 .middle-container{
-	margin: 100px auto 0 auto;
-	width: 700px;
-	height: 1700px;
-	background: #000;
+	margin: 10% auto 0 auto;
+	width: 50%;
 }
 
+img{
+	max-width: 25%;
+	height: auto;
+	border-radius: 50%;
+
+}
+.CV-pic{
+	margin-top: 0;
+}
 .skill-row{
 	text-align: left;
 	line-height: 2;
@@ -141,6 +143,19 @@ img{
 }
 
 .bottom-container{
-	background: #000;
+	background: radial-gradient(#85F4FF, #42C2FF);
+	
+}
+
+@-webkit-keyframes Gradient {
+	0% {
+		background-position: 30% 50%
+	}
+	50% {
+		background-position: 25% 50%
+	}
+	100% {
+		background-position: 30% 50%
+	}
 	
 }
